Support JsonSerializable and XmlSerializable in RestProxy (#31221)
Support JsonSerializable and XmlSerializable in RestProxy